--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,9 @@ dependencies {
 //    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 //    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 //
-//    implementation "io.reactivex.rxjava2:rxjava:2.2.7"
-//    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-//    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.7"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'jp.wasabeef:picasso-transformations:2.1.2'
